# image_processor

./: CMakeLists.txt  arg_parser.cpp  arg_parser.h  color.cpp  color.h  image.cpp  image.h  image_processor.cpp  matrix.cpp  matrix.h
filters/: base_filter.h  blur.cpp  blur.h  crop.cpp  crop.h  crystallize.cpp  crystallize.h  edge_detection.cpp  edge_detection.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
